# sleep-stage-prediction

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
notebooks/exploratory/: CNN.ipynb  DeepConvLSTM.ipynb  MULTICNN.ipynb  MULTITCN.ipynb  dreamt federated conditions.ipynb  dreamt_attempt.ipynb  dreamt_mia_centralized.ipynb  exploring_dreamt.ipynb  old_preprocessing.ipynb
sleep_stage_prediction/: train_pipeline.py
sleep_stage_prediction/data/: __init__.py  datasets.py  dreamt.py  make_dataset.py  utils.py
sleep_stage_prediction/models/: __init__.py  architectures.py  evaluate.py  train.py
