[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sleep_stage_prediction"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Yacine Belal" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "pip",
    "python-dotenv",
    "ruff",
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["sleep_stage_prediction"]
include = ["pyproject.toml", "sleep_stage_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["sleep_stage_prediction"]
force-sort-within-sections = true

